AC_PREREQ([2.69])
AC_INIT([rtems-c-src-lib-libbsp-arm-stm32f7xx],[_RTEMS_VERSION],[https://devel.rtems.org/newticket])
RTEMS_TOP(../../../../../..)
RTEMS_SOURCE_TOP
RTEMS_BUILD_TOP
RTEMS_BSP_LINKCMDS

RTEMS_CANONICAL_TARGET_CPU
AM_INIT_AUTOMAKE([no-define nostdinc foreign 1.12.2])
RTEMS_BSP_CONFIGURE


RTEMS_BSPOPTS_SET([STM32F7XX_HCLK],[*],[16000000])
RTEMS_BSPOPTS_HELP([STM32F7XX_HCLK],[HCLK frequency in Hz])

RTEMS_BSPOPTS_SET([STM32F7XX_CONSOLE_BAUDRATE],[*],[115200])
RTEMS_BSPOPTS_HELP([STM32F7XX_CONSOLE_BAUDRATE],[Baudrate for console USART])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_1],[*],[1])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_1],[enable console on USART 1])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_2],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_2],[enable console on USART 2])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_3],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_3],[enable console on USART 3])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_4],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_4],[enable console on USART 4])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_5],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_5],[enable console on USART 5])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_6],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_6],[enable console on USART 6])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_7],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_7],[enable console on USART 7])

RTEMS_BSPOPTS_SET([STM32F7XX_ENABLE_CONSOLE_USART_8],[*],[])
RTEMS_BSPOPTS_HELP([STM32F7XX_ENABLE_CONSOLE_USART_8],[enable console on USART 8])


RTEMS_BSP_CLEANUP_OPTIONS

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
